# hello_world_8wK2bP

./: LICENSE  README.md  build.bash  pyproject.toml
docs/: pypirc.md
scripts/: build.py  create_project_structure.bash  deploy.bash
src/hello_world_8wK2bP/: __init__.py  cli.py
