[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "hello_world_8wK2bP"
version = "0.0.1"
authors = [
  { name="Michael Brux", email="7270100+michael-brux@users.noreply.github.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/michael-brux/sampleproject"
Issues = "https://github.com/michael-brux/sampleproject/issues"