[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "hello_world_8wK2bP"
version = "0.0.2"
authors = [
  { name="Michael Brux", email="7270100+michael-brux@users.noreply.github.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project. scripts]
hello-world = "hello_world_8wK2bP.cli:main"

[project.urls]
Homepage = "https://github.com/michael-brux/hello_world_8wK2bP"
Issues = "https://github.com/michael-brux/hello_world_8wK2bP/issues"